# playground

./: .gitignore  README.md
CableChat/: Gemfile
PhotoGroove/: PhotoGroove.elm  index.html
actix-web-hello/: Cargo.toml
ast-parsing-benchmark/: .gitignore  Gemfile  README.md  benchmark.rb  local_var_extractor.rb  ractor_parallel.rb  sample.rb  thread_parallel.rb
base64/: Gemfile
blog_os/: Cargo.toml  README.md
cat_chainer/: README.md
chip-8-cpu/: Cargo.toml
codewars/: anagram.rb  instant_runoff_voting.rb  max_rotation.exs  roman.rb
convert-to-sha-action/: run.rb
coverage-on-sinatra/: Gemfile  app.rb  config.ru  coverage_result.rb
dashboard-nextjs/: .gitignore  package.json  projects-default.json
dashboard-ui/: index.html  package-lock.json  package.json
discordbot/: Gemfile  bot.rb
easy_test/: Default.sublime-keymap  easy_test.py
electron-with-ts/: index.ts  package-lock.json  package.json
electronica/: index.html  index.js  package.json
elixir/: elixir.exs
elm/: isKeepable.elm  isOdd.elm  multifly.elm
export_what_i_want/: determine_order.rb  models.rb
exwiw/: Gemfile  LICENSE.txt  README.md  Rakefile  determine_order.rb  extract_from_rails.rb  extract_script.rb  exwiw.gemspec  util.rb
fallback-server/: README.md  package-lock.json  package.json
firecracker/: README.md
github-proxy/: proxy.rb
grrs/: Cargo.toml
grrs/src/: main.rs
grrs/tests/: cli.rs
hello/: Cargo.toml
http-servers/: .gitignore  .ruby-version  Gemfile  benchmark.sh  benchmark_all.sh  benchmark_various_worker_num.sh  give_me_summary.rb  kill_server.sh  load_test.js  start.rb  start.sh
jest-ts/: index.js  jest.config.js  package-lock.json  package.json  tsconfig.json
kwargs-slow/: .gitignore  bench.md  (+11 more)
octocrab-test/: Cargo.toml
octocrab-test/src/: main.rs
rust-json-eval/: Cargo.toml  example.jsonnet  some_lib.libsonnet
rust-json-eval/src/: main.rs
sam-lambda-rust/: Cargo.toml  template.yaml
sam-lambda-rust/src/: lib.rs  main.rs  slack_request_verifier.rs
(+682 files in other folders)
