[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0.6"
assert_fs = "1.0.9"
predicates = "2.1.3"
