[package]
name = "octocrab-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
octocrab = "0.17.0"
jsonwebtoken = "8.2.0"
serde = { version = "1.0.150", features = ["derive"] }
