[package]
name = "rust-json-eval"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsjsonnet-front = "0.1.1"
rsjsonnet-lang = "0.1.1"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
